@@ -240,8 +240,10 @@ class TestSupport(unittest.TestCase):
         self.assertEqual(cm.exception.errno, errno.EBADF)
 
     def test_check_syntax_error(self):
-        support.check_syntax_error(self, "def class")
+        support.check_syntax_error(self, "def class", lineno=1, offset=9)
         self.assertRaises(AssertionError, support.check_syntax_error, self, "1")
+        #with self.assertRaises(AssertionError):
+            #support.check_syntax_error(self, "x=1")
 
     def test_CleanImport(self):
         import importlib
